# flir-capture

./: CMakeLists.txt  PGRDevice.cpp  PGRDevice.h  PtGreyCapture.cpp  README.md
cmake-modules/: FindOpenCV.cmake
